homework with useeffect done

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://egor1040.github.io/todo-app-react",  
+  "homepage": "https://egor1040.github.io/todo-use-effect",  
   "name": "todo-app",
   "version": "0.1.0",
   "private": true,
