--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "homepage": "https://egor1040.github.io/todo-use-effect",  
+  "homepage": "https://egor1040.github.io/todo-app-context",
   "name": "todo-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
